src/common/navigation/components/Navbar.less
@import '~css/navbar';
@import '~css/new/mixins';
@import (reference) '~css/typography';

:local {
    .sidebar {
        position: relative;
        flex-grow: 0;
        flex-shrink: 0;
        min-width: 200px;
        max-width: 350px;
        display: flex;
        flex-direction: row;
        width: 100%;
        height: 100%;
        border-right: 1px solid var(--navigation-border);
        background: var(--navigation-background);
        color: var(--navigation-text-item);

        @media @mobiles {
            min-width: 0;
            max-width: 0;
            z-index: 1040;
            border-right: 0;
        }

        &.isResizing {
            user-select: none;
        }
    }

    .sidebar .sidebar-resizer {
        position: absolute;
        top: 0;
        right: -3px;
        bottom: 0;
        width: 5px;
        z-index: 100;
        cursor: col-resize;
        resize: horizontal;

        @media @mobiles {
            display: none;
        }

        &:hover,
        &.isTouched {
            &::after {
                content: '';
                position: absolute;
                top: 0px;
                bottom: 0px;
                width: 3px;
                background-color: var(--main-primary-1);
                opacity: 1;
                transition-property: opacity;
                transition-duration: 0.25s;
                transition-delay: 0ms;
                pointer-events: none;
            }
        }
    }

    .nav-primary {
        @media @mobiles {
            @width: 80vw;
            width: @width;
            min-width: @width;
            max-width: @width;
            transition: all 0.2s linear;
            top: 0;
            height: 100%;

            position: absolute;
            left: 0;

            &.hidden-panel {
                transform: translateX(-100%);
            }
        }

        @media print {
            display: none !important;
        }

        display: flex;
        flex-direction: column;
        width: inherit;
        min-width: 200px;
        max-width: 350px;
        background: var(--navigation-background);
    }

    .nav-dropdown-wrapper {
        position: relative;
        border-bottom: 1px solid
            hsla(
                var(--navigation-title-item-h),
                var(--navigation-title-item-s),
                var(--navigation-title-item-l),
                0.08
            );
    }

    .title {
        .heading-subsection-semibold();
        color: var(--navigation-title-item);
        padding: var(--layout-spacing-s) 20px;
    }

    .navbar-content {
        flex: 1;
        overflow: auto;
        padding-bottom: 24px;
        margin-right: 3px;

        scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
        scrollbar-width: thin;

        &::-webkit-scrollbar-thumb {
            background: var(--scrollbar-thumb);
            visibility: initial;
        }

        &::-webkit-scrollbar-track {
            background-color: var(--scrollbar-track);
        }
    }

    .navbar-cta-group {
        display: flex;
        flex-direction: column;
        margin-top: 24px;
    }

    .check {
        color: var(--neutral-grey-4);
        font-size: 20px;
    }
}

:global(.globalNav) :local {
    .sidebar {
        border-right: 0;
        border-left: 1px solid var(--navigation-border);

        .sidebar-resizer {
            right: -4px;
            width: 8px;

            &:hover,
            &.isTouched {
                &::after {
                    content: none;
                }
            }
        }
    }

    .nav-dropdown-wrapper {
        border-bottom: 0;
    }

    .title {
        padding: 20px;
    }

    .navbar-cta-group {
        margin-top: var(--layout-spacing-xs);
    }
}

